# videos_stats_tg_bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  tasks.md
alembic/versions/: 1f9859e3d6cd_initial.py  2457a0eb8a9a_filling_data.py
src/: main.py
src/core/: config.py
src/core/db/: session.py
src/core/db/models/: __init__.py  base.py  video_snapshots.py  videos.py
src/llm/: prompt.py  service.py
